# second-watch-network

./: .gitignore  CLAUDE.md  DATABASE_CHECKLIST.md  FRONTEND_BACKEND_INTEGRATION.md  GITHUB_SETUP.md  GREEN_ROOM_IMPLEMENTATION.md  HOTSET_CATCHUP_SUGGESTIONS_ENHANCED.md  HOTSET_IMPLEMENTATION_COMPLETE.md  HOTSET_INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  LOCALHOST_STARTUP.md  PORTING_COMPLETE.md  README.md  SETUP_COMPLETE.md  SWN_BATTLE_PLAN.md  SWN_ENTERPRISE_ANALYSIS_REPORT.md  SWN_INVESTMENT_NECESSITY_ANALYSIS.md  SWN_REVENUE_ANALYSIS.md  TESTING_GUIDE.md  aws-config.md  vercel.json
app/: README.md  main.py  (+1 more)
swn-dailies-helper/: .gitignore  README.md  TODO.md  build.spec  pyproject.toml  run.ps1  run_windows.bat  test_complete_workflow.py  update.ps1  update_windows.bat
swn-dailies-helper/.github/workflows/: build.yml
swn-dailies-helper/THIRD_PARTY_LICENSES/: Apache-2.0.txt  BSD-2-Clause.txt  BSD-3-Clause.txt  GPL-2.0.txt  GPL-3.0.txt  LGPL-2.1.txt  MIT.txt  NOTICES.md
swn-dailies-helper/THIRD_PARTY_LICENSES/exiftool/: COPYRIGHT.txt  LICENSE.txt
swn-dailies-helper/THIRD_PARTY_LICENSES/mediainfo/: COPYRIGHT.txt  LICENSE.txt
swn-dailies-helper/THIRD_PARTY_LICENSES/mhl-tool/: COPYRIGHT.txt  LICENSE.txt
swn-dailies-helper/THIRD_PARTY_LICENSES/smartmontools/: COPYRIGHT.txt  LICENSE.txt
swn-dailies-helper/resources/ffmpeg/: README.md
swn-dailies-helper/scripts/: download_all_binaries.py  download_exiftool.py  download_mediainfo.py  download_mhl_tool.py  download_rclone.py  download_smartctl.py
swn-dailies-helper/src/: __init__.py  main.py  version.py
(+2229 files in other folders)
