[project]
name = "swn-dailies-helper"
version = "1.0.0"
description = "Desktop helper for Second Watch Network - offload footage, generate proxies, upload to cloud"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Second Watch Network"}
]
dependencies = [
    "PyQt6>=6.6.0",
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.26.0",
    "xxhash>=3.4.0",
    "ffmpeg-python>=0.2.0",
    "boto3>=1.34.0",
    "keyring>=24.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "watchdog>=3.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.3.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[project.scripts]
swn-helper = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
